# byteBros-saludTechAlpes

./: .gitignore  README.md  byteBros-saludTechAlpes.postman_collection.json  docker-compose.yml  pyproject.toml  saludtechalpes.Dockerfile
bff_web/: README.md  bff_web.Dockerfile  requirements.txt
bff_web/src/: __init__.py  procesamiento.py  sagas.py  suscripciones.py  utils.py
microservicio-notificaciones/: .gitpod.yml  notificaciones.Dockerfile  requirements.txt
microservicio-notificaciones/src/api/: notificaciones.py
microservicio-notificaciones/src/modulos/notificaciones/aplicacion/: consumidor.py  event_processor.py  notificacion.py
microservicio-procesamiento/: README.md  procesamiento.Dockerfile  requirements.txt
microservicio-procesamiento/src/saludtechalpes/: __init__.py  run.py
microservicio-procesamiento/src/saludtechalpes/config/: db.py  uow.py
microservicio-procesamiento/src/saludtechalpes/presentacion/: api.py
microservicio-sagas/: .gitignore  requirements.txt
microservicio-sagas/src/saludtechalpes/api/: suscripciones.py
microservicio-servicio-datos/: README.md  serviciodatos.Dockerfile
microservicio-servicio-datos/src/saludtechalpes/api/: __init__.py  servicioDatos.py
microservicio-suscripciones/: README.md
microservicio-suscripciones/src/saludtechalpes/api/: __init__.py  suscripciones.py
sagas/: README.md  requirements.txt
sagas/src/saludtechalpes/api/: __init__.py  sagas.py
src/saludtechalpes/api/: __init__.py  suscripciones.py
src/saludtechalpes/seedwork/dominio/: entidades.py  objetos_valor.py
(+120 files in other folders)
